--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'cn.travellerr'
-version = '1.0.1'
+version = '1.0.2'
 
 repositories {
     //maven { url 'https://maven.aliyun.com/repository/public' }
@@ -18,6 +18,8 @@ dependencies {
     compileOnly files("./libs/HuYanEconomy-0.1.16.jar")
     compileOnly files("./libs/MiraiDailySign-0.1.1.mirai2.jar")
 
+
+    implementation("org.quartz-scheduler:quartz:2.3.2")
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'cn.hutool:hutool-all:5.8.25'
 }
