--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     compileOnly files("./libs/MiraiDailySign-0.1.1.mirai2.jar")
 
 
+    implementation 'com.hankcs:hanlp:portable-1.8.4'
     implementation("org.quartz-scheduler:quartz:2.3.2")
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'cn.hutool:hutool-all:5.8.25'
